중복 로그인, 토큰 유효성 검사 관련 예외처리 비즈니스 로직 수정